--- a/projet scoring.ipynb
+++ b/projet scoring.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "# import data\n",
-    "dt = pnd.read_table(\"C:\\\\Users\\\\walid_000\\\\Desktop\\\\scoring\\\\Auto\\\\ResiliationContratAuto.txt\", sep='|', encoding = \"ISO-8859-1\")\n",
+    "dt = pnd.read_table(\"..\\\\ResiliationContratAuto.txt\", sep='|', encoding = \"ISO-8859-1\")\n",
     "data = pnd.DataFrame(dt)"
    ]
   },
